@@ -25,7 +25,7 @@ or equivalently::
 The command, if run with ``-h``, will show the available options::
 
     usage: pyvenv [-h] [--system-site-packages] [--symlinks] [--clear]
-                  [--upgrade] ENV_DIR [ENV_DIR ...]
+                  [--upgrade] [--without-pip] ENV_DIR [ENV_DIR ...]
 
     Creates virtual Python environments in one or more target directories.
 
@@ -43,6 +43,11 @@ The command, if run with ``-h``, will show the available options::
                              raised.
       --upgrade              Upgrade the environment directory to use this version
                              of Python, assuming Python has been upgraded in-place.
+      --without-pip          Skips installing or upgrading pip in the virtual
+                             environment (pip is bootstrapped by default)
+
+.. versionchanged:: 3.4
+   Installs pip by default, added the ``--without-pip`` option
 
 If the target directory already exists an error will be raised, unless
 the ``--clear`` or ``--upgrade`` option was provided.
@@ -50,6 +55,9 @@ the ``--clear`` or ``--upgrade`` option was provided.
 The created ``pyvenv.cfg`` file also includes the
 ``include-system-site-packages`` key, set to ``true`` if ``venv`` is
 run with the ``--system-site-packages`` option, ``false`` otherwise.
+
+Unless the ``--without-pip`` option is given, :mod:`ensurepip` will be
+invoked to bootstrap ``pip`` into the virtual environment.
 
 Multiple paths can be given to ``pyvenv``, in which case an identical
 virtualenv will be created, according to the given options, at each
